--- a/agile.html
+++ b/agile.html
@@ -5,27 +5,23 @@
 	<meta charset="UTF-8">
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
 	<meta http-equiv="X-UA-Compatible" content="ie=edge">
-	<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.1.3/css/bootstrap.min.css">
+	<link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/css/bootstrap.min.css"
+		integrity="sha384-Vkoo8x4CGsO3+Hhxv8T/Q5PaXtkKtu6ug5TOeNV6gBiFeWPGFN9MuhOf23Q9Ifjh" crossorigin="anonymous">
 	<link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.6.1/css/all.css"
 		integrity="sha384-gfdkjb5BdAXd+lj+gudLWI+BXq4IuLW5IT+brZEZsLFm++aCMlF1V92rMkPaX4PP" crossorigin="anonymous">
-	<link href="https://fonts.googleapis.com/css?family=Montserrat&display=swap:100,200,300,400,500,600,700"
-		rel="stylesheet">
-	<link rel="stylesheet" href="./assets/css/style.css" type="text/css" />
-	<title>Agile</title>
+	<link rel="stylesheet" href="assets/css/style.css" type="text/css" />
+	<title>Anna Janiak</title>
 
 </head>
 
 <body>
 	<!-- NAVIGATION -->
 	<header>
-		<nav class="navbar navbar-expand-lg static-top">
+		<!-- <nav class="navbar navbar-expand-lg static-top">
 			<div class="container">
-				<a class="navbar-brand" href="index.html">Anna Janiak</a>
-				<button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarResponsive" aria-controls="navbarResponsive" aria-expanded="false" aria-label="Toggle navigation">
-          <span class="navbar-toggler-icon"></span>
-        </button>
-				<div class="collapse navbar-collapse" id="navbarResponsive">
-					<ul class="navbar-nav ml-auto">
+				<a class="navbar-brand" href="index.html">Anna Janiak</a> -->
+		<!-- <div class="collapse navbar-collapse" id="navbarResponsive">-->
+		<!-- <ul class="navbar-nav ml-auto">
 						<li class="nav-item active px-3">
 							<a class="nav-link" href="tech.html">TECH
 								<span class="sr-only">(current)</span>
@@ -42,6 +38,34 @@
 						</li>
 					</ul>
 				</div>
+			</div>
+		</nav> -->
+
+		<nav class="navbar navbar-expand-lg static-top navbar-dark bg-dark">
+			<a class="navbar-brand" href="index.html">Anna Janiak</a>
+			<button class="navbar-toggler" type="button" data-toggle="collapse"
+                data-target="#navbarTogglerDemo02" aria-controls="navbarTogglerDemo02"
+                aria-expanded="false" aria-label="Toggle navigation">
+                <span class="navbar-toggler-icon"></span>
+            </button>
+
+			<div class="collapse navbar-collapse" id="navbarTogglerDemo02">
+				<ul class="navbar-nav ml-auto">
+					<li class="nav-item active">
+						<a class="nav-link" href="tech.html">TECH
+							<span class="sr-only">(current)</span>
+						</a>
+					</li>
+					<li class="nav-item">
+						<a class="nav-link" href="agile.html">Agile</a>
+					</li>
+					<li class="nav-item">
+						<a class="nav-link" href="softskills.html">Soft Skills</a>
+					</li>
+					<li class="nav-item">
+						<a class="nav-link" href="contact.html">Contact</a>
+					</li>
+				</ul>
 			</div>
 		</nav>
 	</header>
@@ -62,42 +86,83 @@
 				<p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Autem ipsam nulla, magni veniam iure,
 					magnam consequuntur, dicta rerum temporibus laborum perspiciatis amet explicabo fugit esse.
 					Voluptatibus, harum perspiciatis! Eligendi, doloribus!</p>
-                    <a href="https://www.scrum.org/" type="button" class="btn btn-outline-secondary" target="_blank">Read More</a> 
+				<a href="https://www.scrum.org/" type="button" class="btn btn-outline-secondary" target="_blank">Read
+					More</a>
 			</div>
 			<div class="col-4">
-			<h3>KANBAN</h3>
-			<p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Optio quam ab fuga repudiandae, qui, suscipit
-				aperiam enim corrupti laboriosam accusamus exercitationem? Aut laborum voluptas aliquid similique minima
-				delectus maxime odio.</p>
-                <a href="https://www.scrum.org/resources/kanban-guide-scrum-teams" type="button" class="btn btn-outline-secondary" target="_blank">Read More</a> 
-		</div>
-		<div class="col-4">
-			<h3>SAFe</h3>
-			<p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Ducimus inventore, saepe veritatis alias nihil
-				excepturi ullam nostrum rerum quam sint, est dignissimos eum perferendis earum perspiciatis obcaecati
-				eius quod natus!</p>
-                <a href="https://www.scaledagileframework.com/" type="button" class="btn btn-outline-secondary" target="_blank">Read More</a> 
+				<h3>KANBAN</h3>
+				<p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Optio quam ab fuga repudiandae, qui,
+					suscipit
+					aperiam enim corrupti laboriosam accusamus exercitationem? Aut laborum voluptas aliquid similique
+					minima
+					delectus maxime odio.</p>
+				<a href="https://www.scrum.org/resources/kanban-guide-scrum-teams" type="button"
+					class="btn btn-outline-secondary" target="_blank">Read More</a>
+			</div>
+			<div class="col-4">
+				<h3>SAFe</h3>
+				<p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Ducimus inventore, saepe veritatis alias
+					nihil
+					excepturi ullam nostrum rerum quam sint, est dignissimos eum perferendis earum perspiciatis
+					obcaecati
+					eius quod natus!</p>
+				<a href="https://www.scaledagileframework.com/" type="button" class="btn btn-outline-secondary"
+					target="_blank">Read More</a>
+			</div>
 		</div>
 	</div>
 
-	<!--FOOTER-->
-	<footer class="footer fixed-bottom">
-		<div class="container-fluid">
-			<div class="row">
-				<div class="col-12">
-					<ul class="social-networks">
-						<li><a href="https://www.linkedin.com/in/anna-j-605a40177/"
-								target="_blank"><i class="fab fa-linkedin-in"></i></a></li>
-						<li><a href="https://github.com/annaweronica?tab=repositories"
-								target="_blank"><i class="fab fa-github"></i></a></li>
-						<li><a href="https://www.meetup.com/members/276920213/"
-								target="_blank"><i class="fab fa-meetup"></i></a>
-						</li>
-					</ul>
+		<!--FOOTER-->
+		<footer class="footer">
+			<!-- <footer class="footer fixed-bottom"> -->
+			<div class="container">
+				<div class="row">
+					<div class="col-sm">
+						<div class="address footer-item">
+							<a href="contact.html">Pargasgatan 34 Lgh 1201 <i class="fas fa-home"></i>
+								<br>16471 Kista, Stockholm</a>
+						</div>
+					</div>
+					<div class="col-sm">
+						<ul class="social-networks footer-item">
+							<li>
+								<a href="https://www.linkedin.com/in/anna-j-605a40177/"
+									target="_blank"><i class="fab fa-linkedin-in"></i>
+								</a>
+							</li>
+							<li>
+								<a href="https://github.com/annaweronica?tab=repositories"
+									target="_blank"><i class="fab fa-github"></i>
+								</a>
+							</li>
+							<li>
+								<a href="https://www.meetup.com/members/276920213/"
+									target="_blank"><i class="fab fa-meetup"></i>
+								</a>
+							</li>
+						</ul>
+					</div>
+					<div class="col-sm">
+						<div class="download footer-item">
+							<p>Download CV.pdf</p>
+							<a href="assets/cv/cvAnnaJaniakJansson.pdf" target="_blank">
+								<i class="fas fa-download"></i></a>
+						</div>
+					</div>
 				</div>
 			</div>
-		</div>
-	</footer>
+		</footer>
+
+		<script src="https://code.jquery.com/jquery-3.4.1.slim.min.js"
+			integrity="sha384-J6qa4849blE2+poT4WnyKhv5vZF5SrPo0iEjwBvKU7imGFAV0wwj1yYfoRSJoZ+n" crossorigin="anonymous">
+		</script>
+		<script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.0/dist/umd/popper.min.js"
+			integrity="sha384-Q6E9RHvbIyZFJoft+2mJbHaEWldlvI9IOYy5n3zV9zzTtmI3UksdQRVvoxMfooAo" crossorigin="anonymous">
+		</script>
+		<script src="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/js/bootstrap.min.js"
+			integrity="sha384-wfSDF2E50Y2D1uUdj0O3uMBJnjuUD4Ih7YwaYd1iqfktj0Uod8GCExl3Og8ifwB6" crossorigin="anonymous">
+		</script>
+
 </body>
 
 </html>
