--- a/index.html
+++ b/index.html
@@ -17,7 +17,6 @@
 <body>
 	<!-- NAVIGATION -->
 	<header>
-		<div class="container-fluid">
 			<nav class="navbar navbar-expand-lg static-top navbar-dark bg-dark">
 				<a class="navbar-brand" href="index.html">Anna Janiak</a>
 				<button class="navbar-toggler" type="button" data-toggle="collapse"
@@ -44,7 +43,6 @@
 					</ul>
 				</div>
 			</nav>
-		</div>
 	</header>
 
 	<!--CONTENT-->
@@ -69,13 +67,15 @@
 		<div class="container-fluid">
 			<div class="row">
 				<div class="col-sm-4">
-					<div class="phone-number footer-item">
+					<!-- <div class="phone-number footer-item"> -->
+                    <div class="footer-item">
 						<a href="contact.html">0 793360854 <i class="fas fa-phone"></i>
 						</a>
 					</div>
 				</div>
 				<div class="col-sm-4">
-					<ul class="social-networks footer-item">
+					<!-- <ul class="social-networks footer-item"> -->
+                    <ul class="footer-item">
 						<li>
 							<a href="https://www.linkedin.com/in/anna-j-605a40177/"
 								target="_blank"><i class="fab fa-linkedin-in"></i>
@@ -94,10 +94,10 @@
 					</ul>
 				</div>
 				<div class="col-sm-4">
-					<div class="download footer-item">
-						<p>Download CV.pdf</p>
+					<div class="footer-item">
+						<!-- <p></p> -->
 						<a href="assets/cv/cvAnnaJaniakJansson.pdf" target="_blank">
-							<i class="fas fa-download"></i></a>
+							Download CV.pdf <i class="fas fa-download"></i></a>
 					</div>
 				</div>
 			</div>
