--- a/index.html
+++ b/index.html
@@ -17,36 +17,36 @@
 <body>
 	<!-- NAVIGATION -->
 	<header>
-			<nav class="navbar navbar-expand-lg static-top navbar-dark bg-dark">
-				<a class="navbar-brand" href="index.html">Anna Janiak</a>
-				<button class="navbar-toggler" type="button" data-toggle="collapse"
+		<nav class="navbar navbar-expand-lg static-top navbar-dark bg-dark">
+			<a class="navbar-brand" href="index.html">Anna Janiak</a>
+			<button class="navbar-toggler" type="button" data-toggle="collapse"
                 data-target="#navbarTogglerDemo02" aria-controls="navbarTogglerDemo02"
                 aria-expanded="false" aria-label="Toggle navigation">
                 <span class="navbar-toggler-icon"></span>
             </button>
-				<div class="collapse navbar-collapse" id="navbarTogglerDemo02">
-					<ul class="navbar-nav ml-auto">
-						<li class="nav-item active">
-							<a class="nav-link" href="tech.html">TECH
-								<span class="sr-only">(current)</span>
-							</a>
-						</li>
-						<li class="nav-item">
-							<a class="nav-link" href="agile.html">Agile</a>
-						</li>
-						<li class="nav-item">
-							<a class="nav-link" href="softskills.html">Soft Skills</a>
-						</li>
-						<li class="nav-item">
-							<a class="nav-link" href="contact.html">Contact</a>
-						</li>
-					</ul>
-				</div>
-			</nav>
+			<div class="collapse navbar-collapse" id="navbarTogglerDemo02">
+				<ul class="navbar-nav ml-auto">
+					<li class="nav-item active">
+						<a class="nav-link" href="tech.html">TECH
+							<span class="sr-only">(current)</span>
+						</a>
+					</li>
+					<li class="nav-item">
+						<a class="nav-link" href="agile.html">Agile</a>
+					</li>
+					<li class="nav-item">
+						<a class="nav-link" href="softskills.html">Soft Skills</a>
+					</li>
+					<li class="nav-item">
+						<a class="nav-link" href="contact.html">Contact</a>
+					</li>
+				</ul>
+			</div>
+		</nav>
 	</header>
 
 	<!--CONTENT-->
-	<div class="container-fluid">
+	<div class="container-fluid content">
 		<div class="row">
 			<div class="col-lg-12 landing-image image">
 			</div>
@@ -62,57 +62,66 @@
 		</div>
 	</div>
 
-	<!--FOOTER-->
-	<footer class="footer">
-		<div class="container-fluid">
-			<div class="row">
-				<div class="col-sm-4">
-					<!-- <div class="phone-number footer-item"> -->
-                    <div class="footer-item">
-						<a href="contact.html">0 793360854 <i class="fas fa-phone"></i>
-						</a>
-					</div>
-				</div>
-				<div class="col-sm-4">
-					<!-- <ul class="social-networks footer-item"> -->
-                    <ul class="footer-item">
-						<li>
-							<a href="https://www.linkedin.com/in/anna-j-605a40177/"
-								target="_blank"><i class="fab fa-linkedin-in"></i>
-							</a>
-						</li>
-						<li>
-							<a href="https://github.com/annaweronica?tab=repositories"
-								target="_blank"><i class="fab fa-github"></i>
-							</a>
-						</li>
-						<li>
-							<a href="https://www.meetup.com/members/276920213/"
-								target="_blank"><i class="fab fa-meetup"></i>
-							</a>
-						</li>
-					</ul>
-				</div>
-				<div class="col-sm-4">
-					<div class="footer-item">
-						<!-- <p></p> -->
-						<a href="assets/cv/cvAnnaJaniakJansson.pdf" target="_blank">
-							Download CV.pdf <i class="fas fa-download"></i></a>
-					</div>
-				</div>
+	<!-- <div class="row">
+		<div class="col-lg-12">
+			<div class="extra-info" id="landing-content">
+				<h1>... having experience in Human Resources and TV News Media.</h1>
 			</div>
-		</div>
-	</footer>
+			</div> -->
 
-	<script src="https://code.jquery.com/jquery-3.4.1.slim.min.js"
-		integrity="sha384-J6qa4849blE2+poT4WnyKhv5vZF5SrPo0iEjwBvKU7imGFAV0wwj1yYfoRSJoZ+n" crossorigin="anonymous">
-	</script>
-	<script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.0/dist/umd/popper.min.js"
-		integrity="sha384-Q6E9RHvbIyZFJoft+2mJbHaEWldlvI9IOYy5n3zV9zzTtmI3UksdQRVvoxMfooAo" crossorigin="anonymous">
-	</script>
-	<script src="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/js/bootstrap.min.js"
-		integrity="sha384-wfSDF2E50Y2D1uUdj0O3uMBJnjuUD4Ih7YwaYd1iqfktj0Uod8GCExl3Og8ifwB6" crossorigin="anonymous">
-	</script>
+			<!--FOOTER-->
+			<footer class="footer">
+				<div class="container-fluid">
+					<div class="row">
+						<div class="col-sm-4">
+							<!-- <div class="phone-number footer-item"> -->
+							<div class="footer-item">
+								<a href="contact.html">0 793360854 <i class="fas fa-phone"></i>
+								</a>
+							</div>
+						</div>
+						<div class="col-sm-4 ">
+							<ul class="social-networks footer-item">
+								<li>
+									<a href="https://www.linkedin.com/in/anna-j-605a40177/"
+										target="_blank"><i class="fab fa-linkedin-in"></i>
+									</a>
+								</li>
+								<li>
+									<a href="https://github.com/annaweronica?tab=repositories"
+										target="_blank"><i class="fab fa-github"></i>
+									</a>
+								</li>
+								<li>
+									<a href="https://www.meetup.com/members/276920213/"
+										target="_blank"><i class="fab fa-meetup"></i>
+									</a>
+								</li>
+							</ul>
+						</div>
+						<div class="col-sm-4">
+							<div class="footer-item">
+								<!-- <p></p> -->
+								<a href="assets/cv/cvAnnaJaniakJansson.pdf" target="_blank">
+									Download CV.pdf <i class="fas fa-download"></i></a>
+							</div>
+						</div>
+					</div>
+				</div>
+			</footer>
+
+			<script src="https://code.jquery.com/jquery-3.4.1.slim.min.js"
+				integrity="sha384-J6qa4849blE2+poT4WnyKhv5vZF5SrPo0iEjwBvKU7imGFAV0wwj1yYfoRSJoZ+n"
+				crossorigin="anonymous">
+			</script>
+			<script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.0/dist/umd/popper.min.js"
+				integrity="sha384-Q6E9RHvbIyZFJoft+2mJbHaEWldlvI9IOYy5n3zV9zzTtmI3UksdQRVvoxMfooAo"
+				crossorigin="anonymous">
+			</script>
+			<script src="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/js/bootstrap.min.js"
+				integrity="sha384-wfSDF2E50Y2D1uUdj0O3uMBJnjuUD4Ih7YwaYd1iqfktj0Uod8GCExl3Og8ifwB6"
+				crossorigin="anonymous">
+			</script>
 
 </body>
 
