--- a/index.html
+++ b/index.html
@@ -72,7 +72,8 @@
 	<!--FOOTER-->
 	<footer class="footer">
 		<div class="container-fluid">
-			<span>
+			<span class="footer-content">footer content
+
 					<!-- <div class="row">
 						<div class="col-sm-4">
 							<div class="footer-item">
