--- a/agile.html
+++ b/agile.html
@@ -112,8 +112,8 @@
 	</div>
 
 	<!--FOOTER-->
-	<footer class="footer">
-		<div class="container">
+     <footer class="footer"> 
+		<!-- <div class="container">
 			<div class="row">
 				<div class="col-sm">
 					<div class="phone-number footer-item">
@@ -148,7 +148,7 @@
 					</div>
 				</div>
 			</div>
-		</div>
+		</div>  -->
 	</footer>
 
 	<script src="https://code.jquery.com/jquery-3.4.1.slim.min.js"
