--- a/contact.html
+++ b/contact.html
@@ -52,7 +52,48 @@
 		</div>
 
 		<!--CONTACT FORM-->
-		<div class="container contact-form">
+
+		<div class="container animated fadeIn">
+
+			<div class="row">
+					<div class="col-sm-6">
+						<iframe width="100%" height="320px" frameborder="0"
+							src="https://maps.google.com/maps?width=100%&amp;height=320&amp;hl=en&amp;q=Pargasgatan%2034%20Lgh%202101%2C%20Kista+(Where%20I%20live)&amp;ie=UTF8&amp;t=&amp;z=14&amp;iwloc=B&amp;output=embed"
+							frameborder="0" scrolling="no" marginheight="0" marginwidth="0"><a
+								href="https://www.maps.ie/coordinates.html">find my coordinates</a></iframe></div>
+    	
+					<div class="col-sm-6">
+						<form action="form.php" class="contact-form" method="post">
+
+							<div class="form-group">
+								<input type="text" class="form-control" id="name" name="nm" placeholder="Name" required="" autofocus="">
+		        </div>
+
+
+								<div class="form-group form_left">
+									<input type="email" class="form-control" id="email" name="em" placeholder="Email" required="">
+		        </div>
+
+									<div class="form-group">
+										<input type="text" class="form-control" id="phone" onkeypress="return event.charCode >= 48 && event.charCode <= 57" maxlength="10" placeholder="Phone No." required="">
+		      </div>
+										<div class="form-group">
+											<textarea class="form-control textarea-contact" rows="5" id="comment" name="FB" placeholder="Message me" required=""></textarea>
+											<br>
+											<button class="btn btn-default btn-send"> <span class="glyphicon glyphicon-send"></span> Send </button>
+										</div>
+						</form>
+                    </div>
+				</div>
+			</div>
+
+
+
+
+
+
+			<!---------------------------------------------------------------------------------------------------------------------->
+			<!-- <div class="container contact-form">
 			<form method="post">
 				<div class="row">
 					<div class="col-md-6">
@@ -77,11 +118,11 @@
 								</div>
 			</form>
 		</div>
-	</div>
+	</div> -->
 
-	<!--FOOTER-->
-	<footer class="footer">
-		<div class="container">
+			<!--FOOTER-->
+			<footer class="footer">
+				<!-- <div class="container">
 			<div class="row">
 				<div class="col-sm">
 					<div class="phone-number footer-item">
@@ -116,18 +157,21 @@
 					</div>
 				</div>
 			</div>
-		</div>
-	</footer>
+		</div> -->
+			</footer>
 
-	<script src="https://code.jquery.com/jquery-3.4.1.slim.min.js"
-		integrity="sha384-J6qa4849blE2+poT4WnyKhv5vZF5SrPo0iEjwBvKU7imGFAV0wwj1yYfoRSJoZ+n" crossorigin="anonymous">
-	</script>
-	<script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.0/dist/umd/popper.min.js"
-		integrity="sha384-Q6E9RHvbIyZFJoft+2mJbHaEWldlvI9IOYy5n3zV9zzTtmI3UksdQRVvoxMfooAo" crossorigin="anonymous">
-	</script>
-	<script src="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/js/bootstrap.min.js"
-		integrity="sha384-wfSDF2E50Y2D1uUdj0O3uMBJnjuUD4Ih7YwaYd1iqfktj0Uod8GCExl3Og8ifwB6" crossorigin="anonymous">
-	</script>
+			<script src="https://code.jquery.com/jquery-3.4.1.slim.min.js"
+				integrity="sha384-J6qa4849blE2+poT4WnyKhv5vZF5SrPo0iEjwBvKU7imGFAV0wwj1yYfoRSJoZ+n"
+				crossorigin="anonymous">
+			</script>
+			<script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.0/dist/umd/popper.min.js"
+				integrity="sha384-Q6E9RHvbIyZFJoft+2mJbHaEWldlvI9IOYy5n3zV9zzTtmI3UksdQRVvoxMfooAo"
+				crossorigin="anonymous">
+			</script>
+			<script src="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/js/bootstrap.min.js"
+				integrity="sha384-wfSDF2E50Y2D1uUdj0O3uMBJnjuUD4Ih7YwaYd1iqfktj0Uod8GCExl3Og8ifwB6"
+				crossorigin="anonymous">
+			</script>
 
 </body>
 
