--- a/softskills.html
+++ b/softskills.html
@@ -55,7 +55,7 @@
 
 	<!--FOOTER-->
 	<footer class="footer">
-		<div class="container">
+		<!-- <div class="container">
 			<div class="row">
 				<div class="col-sm">
 					<div class="phone-number footer-item">
@@ -90,7 +90,7 @@
 					</div>
 				</div>
 			</div>
-		</div>
+		</div> -->
 	</footer>
 
 	<script src="https://code.jquery.com/jquery-3.4.1.slim.min.js"
