--- a/contact.html
+++ b/contact.html
@@ -88,8 +88,6 @@
 										target="_blank"><i class="fab fa-linkedin-in"></i>
 									</a>
 								</li>
-
-
 								<li class="list-inline-item">
 									<a href="https://github.com/annaweronica?tab=repositories"
 										target="_blank"><i class="fab fa-github"></i>
@@ -137,43 +135,14 @@
 
 
 		<!--FOOTER-->
-		<footer class="footer">
-			<!-- <div class="container">
-			<div class="row">
-				<div class="col-sm">
-					<div class="phone-number footer-item">
-						<a href="contact.html">0 793360854 <i class="fas fa-phone"></i>
-						</a>
-					</div>
-				</div>
-				<div class="col-sm">
-					<ul class="social-networks footer-item">
-						<li>
-							<a href="https://www.linkedin.com/in/anna-j-605a40177/"
-								target="_blank"><i class="fab fa-linkedin-in"></i>
-							</a>
-						</li>
-						<li>
-							<a href="https://github.com/annaweronica?tab=repositories"
-								target="_blank"><i class="fab fa-github"></i>
-							</a>
-						</li>
-						<li>
-							<a href="https://www.meetup.com/members/276920213/"
-								target="_blank"><i class="fab fa-meetup"></i>
-							</a>
-						</li>
-					</ul>
-				</div>
-				<div class="col-sm">
-					<div class="download footer-item">
-						<p>Download CV.pdf</p>
-						<a href="assets/cv/cvAnnaJaniakJansson.pdf" target="_blank">
-							<i class="fas fa-download"></i></a>
-					</div>
-				</div>
+		<footer id="sticky-footer" class="py-4 bg-dark text-white-50">
+			<div class="container text-center">
+            <span class="download">
+            <small><a href="assets/cv/cvAnnaJaniakJansson.pdf" target="_blank"> Download CV.pdf
+							<i class="fas fa-download"></i></a></small><hr>
+                            </span>
+				<small>Copyright &copy; Anna Janiak</small>
 			</div>
-		</div> -->
 		</footer>
 
 		<script src="https://code.jquery.com/jquery-3.4.1.slim.min.js"
